play-pit/Monitoring/InfluxDb2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: influxdata
  labels:
    name: influxdata
