play-pit/Monitoring/InfluxDb2/ingress.yaml

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: influxdata-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - influxdata.kx-as-code.local
  rules:
  - host: influxdata.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: influxdata
           servicePort: 80

---
